--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -31,23 +31,43 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <a class="navbar-brand" href="<?= $this->url('home') ?>">
-                        <img src="<?= $this->basePath('img/laminas-logo.svg') ?>" alt="Laminas">MVC Skeleton
+                        Food Planner
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="<?= $this->url('home') ?>">Home <span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->url('home') ?>">Home</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->url('list') ?>">Lists</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->url('recipe') ?>">Recipes</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->url('ingredient') ?>">Ingredients</a>
+                        </li>
+
+                        
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="container">
+
+            <?= html_entity_decode($this->flashMessenger()->render('error', ['alert', 'alert-danger'])); ?>
+            <?= html_entity_decode($this->flashMessenger()->render('success', ['alert', 'alert-success'])); ?>
+            <?= html_entity_decode($this->flashMessenger()->render('info', ['alert', 'alert-info'])); ?>
+
+
             <?= $this->content ?>
             <hr>
             <footer>
-                <p>&copy; <?= date('Y') ?> <a href="https://getlaminas.org/">Laminas Project</a> a Series of LF Projects, LLC.</p>
+                <p>&copy; <?= date('Y') ?> Food Planner</p>
             </footer>
         </div>
         <?= $this->inlineScript()
