--- a/module/Application/view/application/recipe-ingredient/index.phtml
+++ b/module/Application/view/application/recipe-ingredient/index.phtml
@@ -80,7 +80,7 @@ $recipe = $this->recipe;
 
                     <div class="form-group">
                         <label for="quantity">Quantity</label>
-                        <input type="number" class="form-control" name="quantity" id="quantity" />
+                        <input type="number" step="0.01" class="form-control" name="quantity" id="quantity" />
                         <small>
                             This should be the quantity for <strong>one single serving.</strong>
                         </small>
