Add recipe instructions input

--- a/module/Application/view/application/recipe/index.phtml
+++ b/module/Application/view/application/recipe/index.phtml
@@ -45,7 +45,7 @@ use Lib\Recipe;
                                href="<?= $this->url('recipe-ingredient', [
                                    'recipe_id' => $recipe->getId()
                                ]); ?>">
-                                Edit
+                                Edit Ingredients
                             </a>
 
                             <!-- delete button -->
