--- a/module/Application/view/application/recipe-ingredient/index.phtml
+++ b/module/Application/view/application/recipe-ingredient/index.phtml
@@ -8,7 +8,16 @@ $recipe = $this->recipe;
 
 ?>
 
-<h2><?= $recipe->getName(); ?> / Ingredients</h2>
+<h2>
+    <?= $recipe->getName(); ?>
+    <a class="btn btn-success btn-sm" href="<?= $this->url('recipe', [
+        'action' => 'edit',
+        'id' => $recipe->getId()
+    ]); ?>">
+        Edit
+    </a>
+    / Ingredients
+</h2>
 
 <div class="row">
     <div class="col-md">
