--- a/module/Application/view/application/recipe/create.phtml
+++ b/module/Application/view/application/recipe/create.phtml
@@ -1,13 +1,45 @@
-
+<?php
+$this->headLink()->appendStylesheet("//cdn.quilljs.com/1.3.6/quill.snow.css");
+$this->headScript()->appendFile('//cdn.quilljs.com/1.3.6/quill.min.js', 'text/javascript');
+?>
 <h1>Create a Recipe</h1>
 
-<form action="<?= $this->url('recipe', ['action' => 'save']); ?>" method="POST">
+<form action="<?= $this->url('recipe', ['action' => 'save']); ?>" method="POST" id="recipeCreateForm">
 
     <div class="form-group">
         <label for="name">Recipe Name</label>
         <input type="text" class="form-control" name="name" id="name" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+    <label>Recipe Instructions</label>
+    <!-- Wysiwig Editor -->
+    <div id="editor" style="background-color: white; min-height: 600px"></div>
+    <!-- End wysiwig editor -->
+
+    <input type="hidden" id="instructionsHiddenField" name="instructions" value="" />
+
+    <button type="button" id="save-btn" class="btn btn-primary">Save</button>
 
 </form>
+
+<script>
+    var quill = new Quill('#editor', {
+        theme: 'snow'
+    });
+
+    $(function() {
+
+        $('#save-btn').on('click', function() {
+
+            let data = quill.root.innerHTML;
+            console.log(data);
+
+            // Set the hidden field value
+            $('#instructionsHiddenField').val(data);
+
+            // Submit form
+            $('#recipeCreateForm').submit();
+        })
+
+    })
+</script>
