Add datatables and tidy up some views

--- a/module/Application/view/application/list-recipe/index.phtml
+++ b/module/Application/view/application/list-recipe/index.phtml
@@ -52,7 +52,7 @@ $list = $this->list;
             <div class="card-header">
                 Recipes in List
             </div>
-            <div class="table-responsive">
+            <div class="table-responsive" style="max-height: 330px; overflow: auto;">
 
                 <table class="table">
                     <thead>
@@ -95,7 +95,7 @@ $list = $this->list;
             <div class="card-header">
                 Shopping List
             </div>
-            <div class="table-responsive">
+            <div class="table-responsive" style="max-height: 650px; overflow: auto;">
 
 
                 <table class="table table-condensed">
