--- a/module/Application/view/application/ingredient/create.phtml
+++ b/module/Application/view/application/ingredient/create.phtml
@@ -1,10 +1,10 @@
 
-<h1>Create an Ingredient</h1>
+<h1>Add an Item</h1>
 
 <form action="<?= $this->url('ingredient', ['action' => 'save']); ?>" method="POST">
 
     <div class="form-group">
-        <label for="name">Ingredient Name</label>
+        <label for="name">Item Name</label>
         <input type="text" class="form-control" name="name" id="name" />
     </div>
 
