--- a/module/Application/view/application/ingredient/index.phtml
+++ b/module/Application/view/application/ingredient/index.phtml
@@ -4,7 +4,7 @@ use Lib\Ingredient;
 
 ?>
 
-<h2>Ingredients</h2>
+<h2>Items</h2>
 
 <div class="row">
     <div class="col mb-2 text-right">
@@ -15,7 +15,7 @@ use Lib\Ingredient;
 <div class="row">
     <div class="col-lg">
         <div class="table-responsive">
-            <table class="table">
+            <table class="table" id="itemsTable">
                 <thead>
                 <tr>
                     <th>Name</th>
@@ -70,3 +70,9 @@ use Lib\Ingredient;
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    $(document).ready( function () {
+        $('#itemsTable').DataTable();
+    } );
+</script>
