--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -16,14 +16,20 @@
 
         <!-- Le styles -->
         <?= $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
-            ->prependStylesheet($this->basePath('css/style.css'))
             ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
+            ->prependStylesheet('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css')
+            ->prependStylesheet('//cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css')
+            ->prependStylesheet($this->basePath('css/style.css'))
+
         ?>
 
         <!-- Scripts -->
         <?= $this->headScript()
+            ->prependFile('//cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js')
+            ->prependFile('//cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js')
             ->prependFile($this->basePath('js/bootstrap.min.js'))
-            ->prependFile($this->basePath('js/jquery-3.5.1.min.js')) ?>
+            ->prependFile($this->basePath('js/jquery-3.5.1.min.js'))
+        ?>
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark mb-4" role="navigation">
@@ -51,7 +57,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->url('ingredient') ?>">Ingredients</a>
+                            <a class="nav-link" href="<?= $this->url('ingredient') ?>">Items</a>
                         </li>
 
                         
