Refactor ingredients to items

--- a/module/Application/view/application/item/create.phtml
+++ b/module/Application/view/application/item/create.phtml
@@ -1,7 +1,7 @@
 
 <h1>Add an Item</h1>
 
-<form action="<?= $this->url('ingredient', ['action' => 'save']); ?>" method="POST">
+<form action="<?= $this->url('item', ['action' => 'save']); ?>" method="POST">
 
     <div class="form-group">
         <label for="name">Item Name</label>
