--- a/module/Application/view/application/item/view.phtml
+++ b/module/Application/view/application/item/view.phtml
@@ -1,7 +1,7 @@
 
 <div class="row">
     <div class="col">
-        <h1><?= $this->ingredient->getName(); ?></h1>
+        <h1><?= $this->item->getName(); ?></h1>
     </div>
 </div>
 
