--- a/module/Application/view/application/list-recipe/index.phtml
+++ b/module/Application/view/application/list-recipe/index.phtml
@@ -100,7 +100,7 @@ $list = $this->list;
 
                 <table class="table table-condensed">
                     <tbody>
-                        <?php foreach ($list->getFullIngredientList() as $item) : ?>
+                        <?php foreach ($list->getFullItemList() as $item) : ?>
                             <tr>
                                 <td><?= $item['Name']; ?></td>
                                 <td><?= $item['total']; ?> <?= $item['Unit']; ?></td>
