--- a/module/Application/view/application/recipe/index.phtml
+++ b/module/Application/view/application/recipe/index.phtml
@@ -42,10 +42,10 @@ use Lib\Recipe;
 
                             <!-- Edit button -->
                             <a class="btn btn-primary btn-sm"
-                               href="<?= $this->url('recipe-ingredient', [
+                               href="<?= $this->url('recipe-item', [
                                    'recipe_id' => $recipe->getId()
                                ]); ?>">
-                                Edit Ingredients
+                                Edit Items
                             </a>
 
                             <!-- delete button -->
