--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -57,7 +57,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->url('ingredient') ?>">Items</a>
+                            <a class="nav-link" href="<?= $this->url('item') ?>">Items</a>
                         </li>
 
                         
