--- a/module/Application/view/application/list/index.phtml
+++ b/module/Application/view/application/list/index.phtml
@@ -47,7 +47,7 @@ use Lib\ShoppingList;
                                    href="<?= $this->url('list-recipe', [
                                        'list_id' => $list->getId()
                                    ]); ?>">
-                                    Edit
+                                    Manage Recipes
                                 </a>
 
                                 <!-- delete button -->
