--- a/module/Application/view/application/recipe-item/index.phtml
+++ b/module/Application/view/application/recipe-item/index.phtml
@@ -76,7 +76,7 @@ $recipe = $this->recipe;
 
                     <div class="form-group">
                         <label for="item_id">Select Item</label>
-                        <select class="form-control" name="item_id" id="item_id">
+                        <select class="form-control select2" name="item_id" id="item_id">
                             <?php
                             /** @var Item $item */
                             foreach ($this->items as $item) : ?>
