--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -16,20 +16,37 @@
 
         <!-- Le styles -->
         <?= $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
-            ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
-            ->prependStylesheet('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css')
-            ->prependStylesheet('//cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css')
-            ->prependStylesheet($this->basePath('css/style.css'))
 
+            // Boostrap
+            ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
+
+            // Select2
+            ->prependStylesheet('//cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css')
+
+            // Datatables
+            ->prependStylesheet('//cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css')
+
+            // Custom Styles
+            ->prependStylesheet($this->basePath('css/style.css'))
         ?>
 
         <!-- Scripts -->
         <?= $this->headScript()
+
+            // Select2
+            ->prependFile('//cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js')
+
+            // Datatables
             ->prependFile('//cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js')
             ->prependFile('//cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js')
+
+            // Bootstrap & jquery
             ->prependFile($this->basePath('js/bootstrap.min.js'))
             ->prependFile($this->basePath('js/jquery-3.5.1.min.js'))
         ?>
+
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark mb-4" role="navigation">
@@ -79,5 +96,12 @@
             </footer>
         </div>
         <?= $this->inlineScript() ?>
+
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('.select2').select2();
+            });
+        </script>
+
     </body>
 </html>
