--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,12 @@
     background-color: var(--brand-color);
     border-color: var(--brand-color);
 }
+
+td {
+    vertical-align: middle!important;
+}
+
+.big-checkbox {
+    height: 30px;
+    width: 30px;
+}
