Add some filler buttons to homepage for now

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,1 +1,20 @@
-Home
+
+<style type="text/css">
+    .dabiggest {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+</style>
+
+<div class="row">
+    <div class="col-lg">
+        <a href="<?= $this->url('list'); ?>" class="btn btn-lg btn-primary dabiggest btn-block">Lists</a>
+    </div>
+    <div class="col-lg">
+        <a href="<?= $this->url('recipe'); ?>" class="btn btn-lg btn-warning dabiggest btn-block">Recipes</a>
+    </div>
+    <div class="col-lg">
+        <a href="<?= $this->url('item'); ?>" class="btn btn-lg btn-success dabiggest btn-block">Items</a>
+    </div>
+</div>
+
