--- a/module/Application/view/application/recipe/create.phtml
+++ b/module/Application/view/application/recipe/create.phtml
@@ -11,6 +11,11 @@ $this->headScript()->appendFile('//cdn.quilljs.com/1.3.6/quill.min.js', 'text/ja
         <input type="text" class="form-control" name="name" id="name" />
     </div>
 
+    <div class="form-group">
+        <label for="calories">Kcal per serving</label>
+        <input type="number" id="calories" class="form-control" name="calories"/>
+    </div>
+
     <label>Recipe Instructions</label>
     <!-- Wysiwig Editor -->
     <div id="editor" style="background-color: white; min-height: 600px"></div>
