--- a/module/Application/view/application/recipe/edit.phtml
+++ b/module/Application/view/application/recipe/edit.phtml
@@ -26,6 +26,11 @@ $this->headScript()->appendFile('//cdn.quilljs.com/1.3.6/quill.min.js', 'text/ja
                         <input type="text" id="name" class="form-control" name="name" value="<?= $recipe->getName(); ?>"/>
                     </div>
 
+                    <div class="form-group">
+                        <label for="calories">Kcal per serving</label>
+                        <input type="number" id="calories" class="form-control" name="calories" value="<?= $recipe->getCalories(); ?>"/>
+                    </div>
+
                     <input type="hidden" id="instructionsHiddenField" name="instructions" value="" />
 
                     <label>Recipe Instructions</label>
